[tool.poetry]
name = "mammamia-tbot"
version = "0.1.0"
description = ""
authors = ["Anna Green <annagreen.photo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
